@@ -21,7 +21,6 @@ package org.apache.druid.msq.indexing.destination;
 
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import nl.jqno.equalsverifier.EqualsVerifier;
 import org.apache.druid.data.input.impl.AggregateProjectionSpec;
@@ -29,10 +28,8 @@ import org.apache.druid.data.input.impl.DimensionSchema;
 import org.apache.druid.data.input.impl.StringDimensionSchema;
 import org.apache.druid.jackson.DefaultObjectMapper;
 import org.apache.druid.java.util.common.granularity.Granularities;
-import org.apache.druid.query.aggregation.AggregatorFactory;
 import org.apache.druid.query.aggregation.CountAggregatorFactory;
 import org.apache.druid.query.aggregation.LongSumAggregatorFactory;
-import org.apache.druid.segment.VirtualColumns;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -68,36 +65,29 @@ public class DataSourceMSQDestinationTest
                   )
                   .withPrefabValues(
                       List.class,
-                      ImmutableList.of(
-                          new AggregateProjectionSpec(
-                              "projection1",
-                              VirtualColumns.EMPTY,
-                              ImmutableList.of(
-                                  new StringDimensionSchema("region")
-                              ),
-                              new AggregatorFactory[]{
-                                  new CountAggregatorFactory("count")
-                              }
-                          )
+                      List.of(
+                          AggregateProjectionSpec.builder("projection1")
+                                                 .groupingColumns(new StringDimensionSchema("region"))
+                                                 .aggregators(new CountAggregatorFactory("count"))
+                                                 .build()
                       ),
-                      ImmutableList.of(
-                          new AggregateProjectionSpec(
-                              "projection2",
-                              VirtualColumns.create(
-                                  Granularities.toVirtualColumn(
-                                      Granularities.HOUR,
-                                      Granularities.GRANULARITY_VIRTUAL_COLUMN_NAME
-                                  )
-                              ),
-                              ImmutableList.of(
-                                  new StringDimensionSchema("language"),
-                                  new StringDimensionSchema("region")
-                              ),
-                              new AggregatorFactory[]{
-                                  new CountAggregatorFactory("count"),
-                                  new LongSumAggregatorFactory("sum_added", "added")
-                              }
-                          )
+                      List.of(
+                          AggregateProjectionSpec.builder("projection2")
+                                                 .virtualColumns(
+                                                     Granularities.toVirtualColumn(
+                                                         Granularities.HOUR,
+                                                         Granularities.GRANULARITY_VIRTUAL_COLUMN_NAME
+                                                     )
+                                                 )
+                                                 .groupingColumns(
+                                                     new StringDimensionSchema("language"),
+                                                     new StringDimensionSchema("region")
+                                                 )
+                                                 .aggregators(
+                                                     new CountAggregatorFactory("count"),
+                                                     new LongSumAggregatorFactory("sum_added", "added")
+                                                 )
+                                                 .build()
                       )
                   )
                   .usingGetClass()
